--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
 
 
  <!-- Experience (timeline) -->
+<!-- Experience (timeline) -->
 <section id="experience" class="section reveal">
   <h2>Experience</h2>
 
-  <!-- Subheader -->
+  <!-- Dell Experience -->
   <h3 class="section-subtitle">Dell Experience</h3>
-
-  <!-- Dell timeline starts here -->
   <div class="timeline">
 
     <!-- Consultant -->
@@ -74,7 +73,10 @@
       <div class="when">May 2025 — Present</div>
       <div class="card">
         <h3>Consultant — Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
-        <ul></ul>
+        <ul>
+          <li>Partner with ISG sales leadership to align GTM motions with market opportunity and profitable growth goals.</li>
+          <li>Develop planning frameworks across quota, attainment, and seller economics used in exec decision reviews.</li>
+        </ul>
       </div>
     </div>
 
@@ -82,8 +84,11 @@
     <div class="item">
       <div class="when">Apr 2023 — May 2025</div>
       <div class="card">
-        <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (Joined FRP)</h3>
-        <ul></ul>
+        <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (FRP)</h3>
+        <ul>
+          <li>Owned P&L governance for ISG; improved forecast discipline and investment visibility across product lines.</li>
+          <li>Influenced pricing/margin structure with product & sales to protect mix and profitability.</li>
+        </ul>
       </div>
     </div>
 
@@ -91,8 +96,11 @@
     <div class="item">
       <div class="when">Sep 2021 — Apr 2023</div>
       <div class="card">
-        <h3>Financial Advisor — Sales Operations</h3>
-        <ul></ul>
+        <h3>Financial Advisor — Sales Operations (Storage)</h3>
+        <ul>
+          <li>Supported junior controllership for multiple Storage lines; reduced variance through tighter pipeline hygiene.</li>
+          <li>Built recurring insights on revenue drivers and conversion, improving predictability for planning cycles.</li>
+        </ul>
       </div>
     </div>
 
@@ -102,14 +110,9 @@
       <div class="card">
         <h3>Senior Analyst — Finance Development Program (FDP)</h3>
         <ul>
-          <li>Completed four structured finance rotations:
-            <ul>
-              <li>Accounting Shared Services</li>
-              <li>Customer Financial Services</li>
-              <li>GBO Emerging Markets</li>
-              <li>Global Operations Finance — Market Commodities</li>
-            </ul>
-          </li>
+          <li>Completed four rotations: Accounting Shared Services, Customer Financial Services, GBO Emerging Markets,
+              Global Operations Finance — Market Commodities.</li>
+          <li>Built foundations in controllership, shared services, operations finance, and process rigor.</li>
         </ul>
       </div>
     </div>
@@ -119,46 +122,57 @@
       <div class="when">Apr 2017 — May 2017</div>
       <div class="card">
         <h3>GAT Summer Intern</h3>
-        <ul></ul>
+        <ul>
+          <li>Gained early exposure to Dell’s finance operating model, planning cadence, and cross‑functional collaboration.</li>
+        </ul>
       </div>
     </div>
 
   </div>
 
+  <!-- Divider between segments -->
+  <div class="experience-divider" aria-hidden="true"></div>
 
-<h3 class="section-subtitle" style="margin-top: 2rem;">Early Career</h3>
-<div class="timeline">
+  <!-- Early Career -->
+  <h3 class="section-subtitle">Early Career</h3>
+  <div class="timeline">
 
     <!-- Bloomberg Champions Program -->
-  <div class="item">
-    <div class="when">Jun 2017 — Jan 2018</div>
-    <div class="card">
-      <h3>Bloomberg Champions Program — Bloomberg LP</h3>
-      <ul>
-      </ul>
+    <div class="item">
+      <div class="when">Jun 2017 — Jan 2018</div>
+      <div class="card">
+        <h3>Bloomberg Champions Program — Bloomberg LP</h3>
+        <ul>
+          <li>Trained extensively on Bloomberg Terminal; supported adoption for financial research and analysis use‑cases.</li>
+          <li>Team Runners‑Up — TAPMI Bloomberg Olympiad 2017.</li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <!-- Wildcraft Live Project -->
-  <div class="item">
-    <div class="when">Jul 2016 — Sep 2016</div>
-    <div class="card">
-      <h3>Live Project — Wildcraft India</h3>
-      <ul>
-      </ul>
-    </div>
-  </div>
 
-  <!-- Goldman Sachs Internship -->
-  <div class="item">
-    <div class="when">May 2015 — Jun 2015</div>
-    <div class="card">
-      <h3>Summer Internship — Goldman Sachs</h3>
-      <ul>
-      </ul>
+    <!-- Wildcraft Live Project -->
+    <div class="item">
+      <div class="when">Jul 2016 — Sep 2016</div>
+      <div class="card">
+        <h3>Live Project — Wildcraft India</h3>
+        <ul>
+          <li>Applied statistical tools to assess training & development needs across functions; surfaced capability gaps.</li>
+          <li>Delivered a concise action plan for workforce development priorities.</li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-</div>
+    <!-- Goldman Sachs Internship -->
+    <div class="item">
+      <div class="when">May 2015 — Jun 2015</div>
+      <div class="card">
+        <h3>Summer Internship — Goldman Sachs (AML)</h3>
+        <ul>
+          <li>Executed AML checks on 1,000+ entities; standardized review steps to improve consistency and throughput.</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
 
 </section>
   
