--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
       <div class="card">
         <h3>Consultant — Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
         <ul>
-          <li>Partner with ISG sales leadership to align GTM motions with market opportunity and profitable growth goals.</li>
-          <li>Develop planning frameworks across quota, attainment, and seller economics used in exec decision reviews.</li>
+          <li>Design & Execution of Global ISG Sales GTM Strategy.</li>
+          <li>Sales Opex Management & Capacity Modelling.</li>
+          <li>Drive ISG Sales Pursuit Model Execution.</li>
+          <li>Support WW UDS & DPS Run the Business activities.</li>
         </ul>
       </div>
     </div>
@@ -86,8 +88,9 @@
       <div class="card">
         <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (FRP)</h3>
         <ul>
-          <li>Owned P&L governance for ISG; improved forecast discipline and investment visibility across product lines.</li>
-          <li>Influenced pricing/margin structure with product & sales to protect mix and profitability.</li>
+          <li>Owned P&L governance & RTB activities for ISG; Improved forecast discipline and business predictability.</li>
+          <li>Operationalize the ISG GTM Strategy on the field.</li>
+          <li>Drove various ISG programs & initatives - HE Acceleration, Tech Refresh, PTC.</li>
         </ul>
       </div>
     </div>
@@ -98,8 +101,8 @@
       <div class="card">
         <h3>Financial Advisor — Sales Operations (Storage)</h3>
         <ul>
-          <li>Supported junior controllership for multiple Storage lines; reduced variance through tighter pipeline hygiene.</li>
-          <li>Built recurring insights on revenue drivers and conversion, improving predictability for planning cycles.</li>
+          <li>Supported South Asia Storage business (SOR, RTB, Outlook & BMS activities).</li>
+          <li>Built APJ PowerStore BMS & facilitated weekly reviews with APJ/ geo presidents.</li>
         </ul>
       </div>
     </div>
@@ -112,7 +115,7 @@
         <ul>
           <li>Completed four rotations: Accounting Shared Services, Customer Financial Services, GBO Emerging Markets,
               Global Operations Finance — Market Commodities.</li>
-          <li>Built foundations in controllership, shared services, operations finance, and process rigor.</li>
+          <li>Built foundations in controllership, business partnership, project management and process rigor.</li>
         </ul>
       </div>
     </div>
@@ -123,7 +126,7 @@
       <div class="card">
         <h3>GAT Summer Intern</h3>
         <ul>
-          <li>Gained early exposure to Dell’s finance operating model, planning cadence, and cross‑functional collaboration.</li>
+          <li>Globally aligned and streamlined the Control & Compliance Review(CCR) process.</li>
         </ul>
       </div>
     </div>
@@ -167,7 +170,7 @@
       <div class="card">
         <h3>Summer Internship — Goldman Sachs (AML)</h3>
         <ul>
-          <li>Executed AML checks on 1,000+ entities; standardized review steps to improve consistency and throughput.</li>
+          <li>Client risk Management and Compliance.</li>
         </ul>
       </div>
     </div>
