--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       <div class="card">
         <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (FRP)</h3>
         <ul>
-          <li>Owned P&L governance & RTB activities for ISG; Improved forecast discipline and business predictability.</li>
+          <li>Owned P&L governance & RTB activities for APJC ISG Business.</li>
+          <li>Improved forecast discipline and business predictability.</li>
           <li>Operationalize the ISG GTM Strategy on the field.</li>
           <li>Drove various ISG programs & initatives - HE Acceleration, Tech Refresh, PTC.</li>
         </ul>
@@ -115,7 +116,7 @@
         <ul>
           <li>Completed four rotations: Accounting Shared Services, Customer Financial Services, GBO Emerging Markets,
               Global Operations Finance — Market Commodities.</li>
-          <li>Built foundations in controllership, business partnership, project management and process rigor.</li>
+          <li>Built foundations in Controllership, Business Partnership, Project Management and Process Rigor.</li>
         </ul>
       </div>
     </div>
