--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
   <p>
     I am currently in Year 2 of Dell’s Finance Rotation Program (FRP), a mid‑management leadership development 
-    program that builds future finance leaders. My journey through FRP, FDP, and SOCP has given me a strong 
-    foundation across procurement finance, shared services, accounting, and sales operations.
+    program that builds future finance leaders. My journey through the Finance Development Program (FDP) and Sales Operations Development Program (SOCP) has given me a strong 
+    foundation across procurement finance, shared services, accounting, and sales strategy & operations.
   </p>
 
   <p>
     I bring a proactive, analytical approach to solving complex business challenges, with a strong track record 
-    in business transformation and sales finance partnership. Guided by values of integrity, collaboration, 
+    in business transformation and sales partnership. Guided by values of integrity, collaboration, 
     continuous learning, and community impact, I strive to deliver results that create meaningful value for both 
     the business and the teams I work with.
   </p>
@@ -191,10 +191,10 @@
         <h3>Symbiosis Institute of Business Management (SIBM), Bengaluru</h3>
         <p><strong>Master of Business Administration (MBA)</strong>, Business Administration & Management</p>
         <ul>
+          <li>Student Research Assistant under Dr. Madhvi Sethi & Prof. Pooja Gupta</li>
+          <li>Bloomberg Champion (Academic Year 2017–2018)</li>
           <li>Senior Member — Corporate Relations & Placement Team</li>
           <li>Coordinator — Finergy, The Finance Club</li>
-          <li>Bloomberg Champion (Academic Year 2017–2018)</li>
-          <li>Student Research Assistant under Dr. Madhvi Sethi & Prof. Pooja Gupta</li>
         </ul>
       </div>
     </div>
@@ -250,8 +250,7 @@
       <div class="when">Issued Nov 2013</div>
       <div class="card">
         <h3>SAP Global Certification</h3>
-        <p>SAP</p>
-        <p class="muted">Credential ID: 0011992041</p>
+        <p class="muted">SAP Credential ID: 0011992041</p>
       </div>
     </div>
 
