--- a/index.html
+++ b/index.html
@@ -68,69 +68,84 @@
   <h3 class="section-subtitle">Dell Experience</h3>
   <div class="timeline">
 
-    <!-- Consultant -->
-    <div class="item">
-      <div class="when">May 2025 — Present</div>
-      <div class="card">
-        <h3>Consultant — Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
-        <ul>
-          <li>Design & Execution of Global ISG Sales GTM Strategy.</li>
-          <li>Sales Opex Management & Capacity Modelling.</li>
-          <li>Drive ISG Sales Pursuit Model Execution.</li>
-          <li>Support WW UDS & DPS Run the Business activities.</li>
-        </ul>
-      </div>
+<!-- Consultant -->
+<div class="item">
+  <div class="when">May 2025 — Present</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/dell.png" alt="Dell logo">
+      <h3>Consultant — Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
     </div>
+    <ul>
+      <li>Design & Execution of Global ISG Sales GTM Strategy.</li>
+      <li>Sales Opex Management & Capacity Modelling.</li>
+      <li>Drive ISG Sales Pursuit Model Execution.</li>
+      <li>Support WW UDS & DPS Run the Business activities.</li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Senior Financial Advisor -->
-    <div class="item">
-      <div class="when">Apr 2023 — May 2025</div>
-      <div class="card">
-        <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (FRP)</h3>
-        <ul>
-          <li>Owned P&L governance & RTB activities for APJC ISG Business.</li>
-          <li>Improved forecast discipline and business predictability.</li>
-          <li>Operationalize the ISG GTM Strategy on the field.</li>
-          <li>Drove various ISG programs & initatives - HE Acceleration, Tech Refresh, PTC.</li>
-        </ul>
-      </div>
+<!-- Senior Financial Advisor -->
+<div class="item">
+  <div class="when">Apr 2023 — May 2025</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/dell.png" alt="Dell logo">
+      <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (FRP)</h3>
     </div>
+    <ul>
+      <li>Owned P&L governance & RTB activities for APJC ISG Business.</li>
+      <li>Improved forecast discipline and business predictability.</li>
+      <li>Operationalize the ISG GTM Strategy on the field.</li>
+      <li>Drove various ISG programs & initatives - HE Acceleration, Tech Refresh, PTC.</li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Financial Advisor -->
-    <div class="item">
-      <div class="when">Sep 2021 — Apr 2023</div>
-      <div class="card">
-        <h3>Financial Advisor — Sales Operations (Storage)</h3>
-        <ul>
-          <li>Supported South Asia Storage business (SOR, RTB, Outlook & BMS activities).</li>
-          <li>Built APJ PowerStore BMS & facilitated weekly reviews with APJ/ geo presidents.</li>
-        </ul>
-      </div>
+<!-- Financial Advisor -->
+<div class="item">
+  <div class="when">Sep 2021 — Apr 2023</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/dell.png" alt="Dell logo">
+      <h3>Financial Advisor — Sales Operations (Storage)</h3>
     </div>
+    <ul>
+      <li>Supported South Asia Storage business (SOR, RTB, Outlook & BMS activities).</li>
+      <li>Built APJ PowerStore BMS & facilitated weekly reviews with APJ/ geo presidents.</li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Senior Analyst (FDP Rotations) -->
-    <div class="item">
-      <div class="when">Jun 2018 — Sep 2021</div>
-      <div class="card">
-        <h3>Senior Analyst — Finance Development Program (FDP)</h3>
-        <ul>
-          <li>Completed four rotations: Accounting Shared Services, Customer Financial Services, GBO Emerging Markets,
-              Global Operations Finance — Market Commodities.</li>
-          <li>Built foundations in Controllership, Business Partnership, Project Management and Process Rigor.</li>
-        </ul>
-      </div>
+<!-- Senior Analyst (FDP Rotations) -->
+<div class="item">
+  <div class="when">Jun 2018 — Sep 2021</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/dell.png" alt="Dell logo">
+      <h3>Senior Analyst — Finance Development Program (FDP)</h3>
     </div>
+    <ul>
+      <li>Completed four rotations: Accounting Shared Services, Customer Financial Services, GBO Emerging Markets,
+          Global Operations Finance — Market Commodities.</li>
+      <li>Built foundations in Controllership, Business Partnership, Project Management and Process Rigor.</li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Management Trainee -->
-    <div class="item">
-      <div class="when">Apr 2017 — May 2017</div>
-      <div class="card">
-        <h3>GAT Summer Intern</h3>
-        <ul>
-          <li>Globally aligned and streamlined the Control & Compliance Review(CCR) process.</li>
-        </ul>
-      </div>
+<!-- Management Trainee -->
+<div class="item">
+  <div class="when">Apr 2017 — May 2017</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/dell.png" alt="Dell logo">
+      <h3>GAT Summer Intern</h3>
     </div>
+    <ul>
+      <li>Globally aligned and streamlined the Control & Compliance Review(CCR) process.</li>
+    </ul>
+  </div>
+</div>
 
   </div>
 
@@ -142,39 +157,47 @@
   <div class="timeline">
 
     <!-- Bloomberg Champions Program -->
-    <div class="item">
-      <div class="when">Jun 2017 — Jan 2018</div>
-      <div class="card">
-        <h3>Bloomberg Champions Program — Bloomberg LP</h3>
-        <ul>
-          <li>Trained extensively on Bloomberg Terminal; supported adoption for financial research and analysis use‑cases.</li>
-          <li>Team Runners‑Up — TAPMI Bloomberg Olympiad 2017.</li>
-        </ul>
-      </div>
+<div class="item">
+  <div class="when">Jun 2017 — Jan 2018</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/bloomberg.png" alt="Bloomberg logo">
+      <h3>Bloomberg Champions Program — Bloomberg LP</h3>
     </div>
+    <ul>
+      <li>Trained extensively on Bloomberg Terminal; supported adoption for financial research and analysis use‑cases.</li>
+      <li>Team Runners‑Up — TAPMI Bloomberg Olympiad 2017.</li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Wildcraft Live Project -->
-    <div class="item">
-      <div class="when">Jul 2016 — Sep 2016</div>
-      <div class="card">
-        <h3>Live Project — Wildcraft India</h3>
-        <ul>
-          <li>Applied statistical tools to assess training & development needs across functions; surfaced capability gaps.</li>
-          <li>Delivered a concise action plan for workforce development priorities.</li>
-        </ul>
-      </div>
+<!-- Wildcraft Live Project -->
+<div class="item">
+  <div class="when">Jul 2016 — Sep 2016</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/wildcraft.png" alt="Wildcraft logo">
+      <h3>Live Project — Wildcraft India</h3>
     </div>
+    <ul>
+      <li>Applied statistical tools to assess training & development needs across functions; surfaced capability gaps.</li>
+      <li>Delivered a concise action plan for workforce development priorities.</li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Goldman Sachs Internship -->
-    <div class="item">
-      <div class="when">May 2015 — Jun 2015</div>
-      <div class="card">
-        <h3>Summer Internship — Goldman Sachs (AML)</h3>
-        <ul>
-          <li>Client risk Management and Compliance.</li>
-        </ul>
-      </div>
+<!-- Goldman Sachs Internship -->
+<div class="item">
+  <div class="when">May 2015 — Jun 2015</div>
+  <div class="card">
+    <div class="exp-header">
+      <img class="company-logo" src="assets/goldman.png" alt="Goldman Sachs logo">
+      <h3>Summer Internship — Goldman Sachs (AML)</h3>
     </div>
+    <ul>
+      <li>Client risk Management and Compliance.</li>
+    </ul>
+  </div>
 
   </div>
 
