--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/dell.png" alt="Dell logo">
-      <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (FRP)</h3>
+      <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (Joined FRP)</h3>
     </div>
     <ul>
       <li>Owned P&L governance & RTB activities for APJC ISG Business.</li>
