--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/dell.png" alt="Dell logo">
-      <h3>Consultant — Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
+      <h3>Consultant: Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
     </div>
     <ul>
       <li>Design & Execution of Global ISG Sales GTM Strategy.</li>
@@ -91,7 +91,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/dell.png" alt="Dell logo">
-      <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (Joined FRP)</h3>
+      <h3>Senior Financial Advisor: APJC ISG Controller & Sales Business Partner (Joined FRP)</h3>
     </div>
     <ul>
       <li>Owned P&L governance & RTB activities for APJC ISG Business.</li>
@@ -108,7 +108,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/dell.png" alt="Dell logo">
-      <h3>Financial Advisor — Sales Operations (Storage)</h3>
+      <h3>Financial Advisor: Sales Operations (Storage)</h3>
     </div>
     <ul>
       <li>Supported South Asia Storage business (SOR, RTB, Outlook & BMS activities).</li>
@@ -123,7 +123,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/dell.png" alt="Dell logo">
-      <h3>Senior Analyst — Finance Development Program (FDP)</h3>
+      <h3>Senior Analyst: Finance Development Program (FDP)</h3>
     </div>
     <ul>
       <li>Completed four rotations: Accounting Shared Services, Customer Financial Services, GBO Emerging Markets,
