--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/bloomberg.png" alt="Bloomberg logo">
-      <h3>Bloomberg Champions Program — Bloomberg LP</h3>
+      <h3>Bloomberg Champions Program: Bloomberg LP</h3>
     </div>
     <ul>
       <li>Trained extensively on Bloomberg Terminal; supported adoption for financial research and analysis use‑cases.</li>
@@ -177,7 +177,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/wildcraft.png" alt="Wildcraft logo">
-      <h3>Live Project — Wildcraft India</h3>
+      <h3>Live Project: Wildcraft India</h3>
     </div>
     <ul>
       <li>Applied statistical tools to assess training & development needs across functions; surfaced capability gaps.</li>
@@ -192,7 +192,7 @@
   <div class="card">
     <div class="exp-header">
       <img class="company-logo" src="assets/goldman.png" alt="Goldman Sachs logo">
-      <h3>Summer Internship — Goldman Sachs (AML)</h3>
+      <h3>Summer Internship: Goldman Sachs (AML)</h3>
     </div>
     <ul>
       <li>Client risk Management and Compliance.</li>
@@ -211,7 +211,7 @@
     <div class="item">
       <div class="when">2016 — 2018</div>
       <div class="card">
-        <h3>Symbiosis Institute of Business Management (SIBM), Bengaluru</h3>
+        <h3>Symbiosis Institute of Business Management (SIBM), Bengaluru, India</h3>
         <p><strong>Master of Business Administration (MBA)</strong>, Business Administration & Management</p>
         <ul>
           <li>Student Research Assistant under Dr. Madhvi Sethi & Prof. Pooja Gupta</li>
@@ -226,7 +226,7 @@
     <div class="item">
       <div class="when">2013 — 2016</div>
       <div class="card">
-        <h3>Loyola College</h3>
+        <h3>Loyola College, Chennai, India</h3>
         <p><strong>Bachelor of Commerce (B.Com)</strong>, Business/Commerce</p>
       </div>
     </div>
