--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div class="item">
       <div class="when">2016 — 2018</div>
       <div class="card">
-        <h3>Symbiosis Institute of Business Management (SIBM), Bengaluru, India</h3>
+        <h3>Symbiosis Institute of Business Management (SIBM), Bengaluru</h3>
         <p><strong>Master of Business Administration (MBA)</strong>, Business Administration & Management</p>
         <ul>
           <li>Student Research Assistant under Dr. Madhvi Sethi & Prof. Pooja Gupta</li>
@@ -226,7 +226,7 @@
     <div class="item">
       <div class="when">2013 — 2016</div>
       <div class="card">
-        <h3>Loyola College, Chennai, India</h3>
+        <h3>Loyola College, Chennai</h3>
         <p><strong>Bachelor of Commerce (B.Com)</strong>, Business/Commerce</p>
       </div>
     </div>
